--- a/Menus.html
+++ b/Menus.html
@@ -1,7 +1,168 @@
 <!DOCTYPE html>
-<head><title>Breakfast Menu</title></head>
+
+<head>
+    <title>Restaurant Menu's</title>
+</head>
+
 <body>
-    <div style="color:white; background-image:url('breakfast.jpg');">
-        <p>Hello, kitty.</p>
-     </div>
+    <div style="width:400px;
+        height:550px;
+        padding:20px;
+        padding-top:0px;
+        padding-left:0px;
+        margin:10px;
+        border:10px;
+        border-color:gold;
+        border-style: solid;
+        color:white;
+        background-size:contain;
+        background-position:center;
+        background-image:url('breakfast.jpg');">
+        <div style="width:100%;
+        height:100%;
+        background-color:hsla(0, 4%, 5%, 0.5);
+        padding:10px;">
+            <h2>Breakfast</h2>
+            <div>
+                <ul>
+                    <li>Eggs $8<div>3 eggs sunny side up or scrambled with a choice of side.</div>
+                    </li>
+                    <li>Pancakes $10<div>2 pancakes with jelly choice and side choice.</div>
+                    </li>
+                    <li>Crepes $10<div>2 crepes with jelly choice, whipped cream and side choice.</div>
+                    </li>
+                    <li>French Toast $8<div>2 pieces of Texas French Toast with jelly choice and side choice.</div>
+                    </li>
+                </ul>
+            </div>
+            <h2>Sides</h2>
+            <div>
+                <ul>
+                    <li>Bacon $4<div>three pieces of freshly cooked bacon.</div>
+                    </li>
+                    <li>Sausage links $4<div>2 homemade maple sausage links</div>
+                    </li>
+                    <li>Sausage Patties $4<div>2 homemade maple sausage patties</div>
+                    </li>
+                    <li>Toast $3<div>Texas, White, Wheat, or Raisin Toast.</div>
+                    </li>
+                    <li>Eggs $3<div>One egg sunny side up or scrambled.</div>
+                    </li>
+                </ul>
+            </div>
+            <h2>Jelly's</h2>
+            <div>
+                <ul>
+                    <li>Strawberry, Grape, Blackberry, Blueberry, and Raspberry</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div style="width:400px;
+        height:550px;
+        padding:20px;
+        padding-top:0px;
+        padding-left:0px;
+        margin:10px;
+        border:10px;
+        border-color:green;
+        border-style: solid;
+        color:white;
+        background-size:contain;
+        background-position:center;
+        background-image:url('lunch.webp');">
+        <div style="width:100%;
+        height:100%;
+        background-color:hsla(0, 4%, 5%, 0.5);
+        padding:10px;">
+            <h2>Lunch</h2>
+            <div>
+                <ul>
+                    <li>Ham and Cheese  Sandwich $8<div>Hot or cold ham and cheese sandwich with white bread, side, and salad bar.
+                        </div>
+                    </li>
+                    <li>Taco Bar $5<div>Build your own taco at the taco bar, $5 a plate or $15 for all you can eat.
+                        </div>
+                    </li>
+                    <li>Chicken $10<div>Choice of light or dark meat and deep fried or grilled.</div>
+                    </li>
+                    <li>Fish Sticks $8<div>2 breaded fish fillets with a choice of side.</div>
+                    </li>
+                    <li>Hamburger $10</li>A quarter pound hamburger with your choice of toppings and bun as well as a
+                    choice of side.
+                </ul>
+            </div>
+            <h2>Sides</h2>
+            <div>
+                <ul>
+                    <li>Salad Bar $4<div>Salad bar, all you can eat.</div>
+                    </li>
+                    <li>Cheese Curds $6<div>A basket or homemade cheese curds.</div>
+                    </li>
+                    <li>Onion Rings $6<div>A basket for freshly battered onion rings</div>
+                    </li>
+                    <li>Jalapeno Poppers $6<div>A basket of Jalapeno Poppers with mozzarella cheese and homemade
+                            breading.
+                    <li>Fries $5</li>
+                    <div>Your choice of crinkle cut fries, homemade fresh fries, or sour cream fries.</div>
+            </div>
+            </li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    <div style="width:400px;
+        height:550px;
+        padding:20px;
+        padding-top:0px;
+        padding-left:0px;
+        margin:10px;
+        border:10px;
+        border-color:red;
+        border-style: solid;
+        color:white;
+        background-size:contain;
+        background-position:center;
+        background-image:url('dinner.jpg');">
+        <div style="width:100%;
+        height:100%;
+        background-color:hsla(0, 4%, 5%, 0.5);
+        padding:10px;">
+            <h2>Dinner</h2>
+            <div>
+                <ul>
+                    <li>Steak $20<div>A Large cut steak with mashed potatoes and salad bar.</div>
+                    </li>
+                    <li>All You Can Eat Ribs $16<div>A platter of BBQ ribs that is refilled as many times as you want!
+                        </div>
+                    </li>
+                    <li>Sea Food Platter $18<div>2 fish fillets, popcorn shrimp, butterfly shrimp, coconut shrimp, and
+                            grilled garlic shrimp.</div>
+                    </li>
+                    <li>Brisket $18<div>A tender cut plate of brisket with your choice of seasoning and a side.</div>
+                    </li>
+                </ul>
+            </div>
+            <h2>Sides</h2>
+            <div>
+                <ul>
+                    <li>Salad Bar $4<div>Salad bar, all you can eat.</div>
+                    </li>
+                    <li>Cheese Curds $6<div>A basket or homemade cheese curds.</div>
+                    </li>
+                    <li>Onion Rings $6<div>A basket for freshly battered onion rings</div>
+                    </li>
+                    <li>Jalapeno Poppers $6<div>A basket of breaded mozzarella jalapeno poppers.
+                    <li>Fries $5</li>
+                    <div>Choice of crinkle cut fries, homemade fresh fries, or sour cream fries.</div>
+                    <li>Garlic Mashed Potatoes $3</li>
+                    <div>A helping of mashed potatoes with butter and garlic.</div>
+                    <li>Potato Fries $5</li>
+                    <div>A basket of potato wedges seasoned with BBQ salt.</div>
+            </div>
+            </li>
+            </ul>
+        </div>
+    </div>
+    </div>
 </body>
