--- a/Menus.html
+++ b/Menus.html
@@ -78,7 +78,8 @@
             <h2>Lunch</h2>
             <div>
                 <ul>
-                    <li>Ham and Cheese  Sandwich $8<div>Hot or cold ham and cheese sandwich with white bread, side, and salad bar.
+                    <li>Ham and Cheese Sandwich $8<div>Hot or cold ham and cheese sandwich with white bread, side, and
+                            salad bar.
                         </div>
                     </li>
                     <li>Taco Bar $5<div>Build your own taco at the taco bar, $5 a plate or $15 for all you can eat.
