--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         color:white;
         background-size:contain;
         background-position:center;
-        background-image:url('lunch.webp');">
+        background-image:url('lunch.png');">
         <div style="width:100%;
         height:100%;
         background-color:hsla(0, 4%, 5%, 0.5);
