--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <h2>Breakfast</h2>
             <div>
                 <ul>
-                    <li>Eggs $8<div>3 eggs sunny side up or scrambled with a choice of side.</div>
+                    <li>Eggs $8<div>3 eggs sunny side up or scrambled with a side.</div>
                     </li>
                     <li>Pancakes $10<div>2 pancakes with jelly choice and side choice.</div>
                     </li>
-                    <li>Crepes $10<div>2 crepes with jelly choice, whipped cream and side choice.</div>
+                    <li>Crepes $10<div>2 crepes with jelly choice, whipped cream and side.</div>
                     </li>
-                    <li>French Toast $8<div>2 pieces of Texas French Toast with jelly choice and side choice.</div>
+                    <li>French Toast $8<div>2 pieces of Texas French Toast with jelly choice and side.</div>
                     </li>
                 </ul>
             </div>
@@ -53,7 +53,7 @@
             <h2>Jelly's</h2>
             <div>
                 <ul>
-                    <li>Strawberry, Grape, Blackberry, Blueberry, and Raspberry</li>
+                    <li>Strawberry, Grape, and Raspberry</li>
                 </ul>
             </div>
         </div>
@@ -78,7 +78,7 @@
             <h2>Lunch</h2>
             <div>
                 <ul>
-                    <li>Ham and Cheese Sandwich $8<div>Hot or cold ham and cheese sandwich with white bread, side, and
+                    <li>Ham and Cheese Sandwich $8<div>Hot or cold sandwich with white bread, side, and
                             salad bar.
                         </div>
                     </li>
@@ -89,8 +89,7 @@
                     </li>
                     <li>Fish Sticks $8<div>2 breaded fish fillets with a choice of side.</div>
                     </li>
-                    <li>Hamburger $10</li>A quarter pound hamburger with your choice of toppings and bun as well as a
-                    choice of side.
+                    <li>Hamburger $10</li>A loaded quarter pound hamburger with a side                    choice of side.
                 </ul>
             </div>
             <h2>Sides</h2>
@@ -102,8 +101,7 @@
                     </li>
                     <li>Onion Rings $6<div>A basket for freshly battered onion rings</div>
                     </li>
-                    <li>Jalapeno Poppers $6<div>A basket of Jalapeno Poppers with mozzarella cheese and homemade
-                            breading.
+                    <li>Jalapeno Poppers $6<div>A basket of Jalapeno Poppers with mozzarella cheese dip.
                     <li>Fries $5</li>
                     <div>Your choice of crinkle cut fries, homemade fresh fries, or sour cream fries.</div>
             </div>
