--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
                     </li>
                     <li>Eggs $3<div>One egg sunny side up or scrambled.</div>
                     </li>
+                    <li>Jelly's $1</li><div>Strawberry, Grape, and Raspberry</div>
                 </ul>
             </div>
-            <h2>Jelly's</h2>
             <div>
-                <ul>
-                    <li>Strawberry, Grape, and Raspberry</li>
-                </ul>
             </div>
         </div>
     </div>
@@ -145,7 +142,7 @@
             <h2>Sides</h2>
             <div>
                 <ul>
-                    <li>Salad Bar $4<div>Salad bar, all you can eat.</div>
+                    <li>Salad Bar $4
                     </li>
                     <li>Cheese Curds $6<div>A basket or homemade cheese curds.</div>
                     </li>
@@ -156,8 +153,6 @@
                     <div>Choice of crinkle cut fries, homemade fresh fries, or sour cream fries.</div>
                     <li>Garlic Mashed Potatoes $3</li>
                     <div>A helping of mashed potatoes with butter and garlic.</div>
-                    <li>Potato Fries $5</li>
-                    <div>A basket of potato wedges seasoned with BBQ salt.</div>
             </div>
             </li>
             </ul>
