--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
             <h2>Sides</h2>
             <div>
                 <ul>
-                    <li>Salad Bar $4<div>Salad bar, all you can eat.</div>
+                    <li>Salad Bar $4
                     </li>
                     <li>Cheese Curds $6<div>A basket or homemade cheese curds.</div>
                     </li>
                     <li>Onion Rings $6<div>A basket for freshly battered onion rings</div>
                     </li>
-                    <li>Jalapeno Poppers $6<div>A basket of Jalapeno Poppers with mozzarella cheese dip.
+                    <li>Jalapeno Poppers $6<div>A basket of Jalapeno Poppers with mozzarella dip.
                     <li>Fries $5</li>
                     <div>Your choice of crinkle cut fries, homemade fresh fries, or sour cream fries.</div>
             </div>
