--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     </li>
                     <li>Eggs $3<div>One egg sunny side up or scrambled.</div>
                     </li>
-                    <li>Jelly's $1</li><div>Strawberry, Grape, and Raspberry</div>
+                    <li>Jelly's $1</li>
+                    <div>Strawberry, Grape, and Raspberry</div>
                 </ul>
             </div>
             <div>
@@ -86,7 +87,7 @@
                     </li>
                     <li>Fish Sticks $8<div>2 breaded fish fillets with a choice of side.</div>
                     </li>
-                    <li>Hamburger $10</li>A loaded quarter pound hamburger with a side                    choice of side.
+                    <li>Hamburger $10</li>A loaded quarter pound hamburger with a side choice of side.
                 </ul>
             </div>
             <h2>Sides</h2>
